Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98749

Application crashes if there are more then 8 light sources

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.2.3, 6.3.0 Alpha
    • 6.2.0
    • Quick: 3D
    • None
    • Windows
    • 494a1be6d5 (qt/qtquick3d/dev) bd7f0e9041 (qt/qtquick3d/6.2) 6021c6b138 (qt/qtquick3d/6.3) bd7f0e9041 (qt/tqtc-qtquick3d/6.2) 6021c6b138 (qt/tqtc-qtquick3d/6.3) bd7f0e9041 (qt/tqtc-qtquick3d/6.2.3) bd7f0e9041 (qt/tqtc-qtquick3d/6.2.4)

      If DirectX is used and there are more then 8 light sources with enabled shadow casting, application crashes with error:
      "Too many shadow casting lights in scene, maximum is 8"
      The problem is not reproducible of OpenGL is used instead.

      To reproduce:
      1) Open "Lights Example".
      2) Create 8 duplicates of node "light2".
      3) Set castsShadow: true to all the new nodes.

      In Qt 6.1.0 the console gets spammed with the message, but there is no crash.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hatemelkharashy Hatem ElKharashy
            alexey89 alexey89
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes