Fix crashing for more than eight lights

Pick-to: 6.2 6.3
Fixes: QTBUG-98749
Change-Id: Ib3199dba91674e13064e4f4375533d4e53c29325
Reviewed-by: Antti Määttä <antti.maatta@qt.io>
Reviewed-by: Andy Nichols <andy.nichols@qt.io>